# PersistenceLayerInPythonApplication

./: LICENSE  README.md  pyproject.toml
hello_django_project/: pyproject.toml
hello_django_project/hello_django/apps/stores/: apps.py
hello_django_project/hello_django/config/: asgi.py  settings.py  urls.py  wsgi.py
hello_django_project/hello_django/infrastructure/: apps.py
hello_django_project/hello_django/infrastructure/models/: exceptions.py  querysets.py  utils.py
hello_django_project/hello_django/orders/: tests.py
hello_django_project/hello_django/orders/migrations/: 0001_initial.py  0004_auto_20210929_0519.py
hello_django_project/hello_django/orders/models/: __init__.py  domain_util.py  order.py  report.py
hello_django_project/hello_django/presentation/: apps.py
hello_django_project/hello_django/service/: orders.py
hello_django_project/hello_django/stores/: views.py
hello_django_project/hello_django/stores/migrations/: 0001_initial.py  0002_initial.py
hello_django_project/hello_django/stores/models/: __init__.py  contract.py  contractproduct.py  exceptions.py  store.py  utils.py
hello_django_project/hello_django/users/: models.py
hello_django_project/hello_django/users/migrations/: 0001_initial.py
hello_django_project/infrastructure/: models.py
hello_django_project/tests/: test_hello_django.py
hello_fastapi_project/: pyproject.toml
hello_fastapi_project/hello_fastapi/: .gitlab-ci.yml  README.md  cookiecutter-config-file.yml
hello_fastapi_project/tests/: test_hello_fastapi.py
(+33 files in other folders)
