[tool.poetry]
name = "hello_django_projdct"
version = "0.1.0"
description = ""
authors = ["KimSoungRyoul <KimSoungRyoul@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"
psycopg2 = "^2.9.1"
mysqlclient = "^2.0.3"
sqlformatter = "^1.4"
django-extensions = "^3.1.3"
ipython = "^7.28.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
