[tool.poetry]
name = "hello_fastapi"
version = "0.1.0"
description = ""
authors = ["KimSoungRyoul <KimSoungRyoul@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
cookiecutter = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
